[package]
name = "quantus-cli"
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
license = "Apache-2.0"
description = "Command line interface for interacting with the Quantus Network"
repository = "https://github.com/Quantus-Network/quantus-cli"

[[bin]]
name = "quantus"
path = "src/main.rs"

[dependencies]
# Quantus
rusty-crystals-dilithium = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-dilithium" }
rusty-crystals-hdwallet = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-hdwallet" }
rust_lib_resonance_network_wallet = { git = "https://github.com/Quantus-Network/resonance-mobile-app", package = "rust_lib_resonance_network_wallet" }
poseidon-resonance = { version = "0.6.0", git = "https://github.com/Quantus-Network/poseidon-resonance" }
sp-core = "35.0.0"

# CLI and async runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"

# Terminal UI
colored = "2.0"
console = "0.15"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

# Note: Substrate/Polkadot and Quantus-specific dependencies will be added later
# once we confirm the exact paths and versions needed
