[package]
name = "quantus-cli"
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
license = "Apache-2.0"
description = "Command line interface for interacting with the Quantus Network"
repository = "https://github.com/Quantus-Network/quantus-cli"

[[bin]]
name = "quantus"
path = "src/main.rs"

[dependencies]
# CLI and async runtime
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and error handling
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
rpassword = "7.3"

# Terminal UI
colored = "2.0"
console = "0.15"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hex = "0.4"

# Quantum-Safe Encryption
aes-gcm = "0.10" # AES-256-GCM (quantum-safe with 256-bit keys)
argon2 = "0.5"   # Password-based key derivation (quantum-safe)
rand = "0.8"
zeroize = "1.7"  # Secure memory clearing

# Quantus crypto dependencies
rusty-crystals-dilithium = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-dilithium" }
rusty-crystals-hdwallet = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-hdwallet" }
poseidon-resonance = { git = "https://github.com/Quantus-Network/poseidon-resonance", features = [
	"serde",
] }
dilithium-crypto = { git = "https://github.com/Quantus-Network/chain", package = "dilithium-crypto" }
qp-scheduler = { git = "https://github.com/Quantus-Network/chain", package = "qp-scheduler" }
pallet-reversible-transfers = { git = "https://github.com/Quantus-Network/chain", package = "pallet-reversible-transfers" }

# Blockchain and RPC client
# Note: We use our own modified version of substrate-api-client to support Dilithium crypto
substrate-api-client = { git = "https://github.com/Quantus-Network/resonance-api-client", package = "substrate-api-client" }
jsonrpsee = { version = "0.24", features = [
	"async-client",
	"client-ws-transport-tls",
	"http-client",
	"ws-client",
] }
sp-core = { version = "35.0" }
sp-runtime = { version = "40.1" }
sp-crypto-hashing = { version = "0.1.0" }
codec = { package = "parity-scale-codec", version = "3.7", features = [
	"derive",
] }
scale-info = { version = "2.1", features = ["derive"] }
primitive-types = { version = "0.13", features = ["scale-info", "serde"] }
frame-metadata = { version = "18.0", default-features = false, features = [
	"current",
	"decode",
	"serde_full",
] }
scale-value = "0.18"
subxt = "0.42.1"

[dev-dependencies]
tempfile = "3.8"

# Note: Substrate/Polkadot and Quantus-specific dependencies will be added later
# once we confirm the exact paths and versions needed
