[package]
name = "quantus-cli"
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
license = "Apache-2.0"
description = "Command line interface for interacting with the Quantus Network"
repository = "https://github.com/Quantus-Network/quantus-cli"

[lib]
name = "quantus_cli"
path = "src/lib.rs"

[[bin]]
name = "quantus"
path = "src/main.rs"

[dependencies]
# CLI and async runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Terminal UI
colored = "3.0"

# Additional utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
rpassword = "7.4"

# Quantum-Safe Encryption
argon2 = "0.5"   # Password-based key derivation (quantum-safe)
rand = "0.9"
aes-gcm = "0.10" # AES-256-GCM (quantum-safe with 256-bit keys)

# Quantus crypto dependencies
rusty-crystals-dilithium = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-dilithium" }
rusty-crystals-hdwallet = { git = "https://github.com/Quantus-Network/rusty-crystals.git", package = "rusty-crystals-hdwallet" }
poseidon-resonance = { git = "https://github.com/Quantus-Network/poseidon-resonance", branch = "main", features = [
	"serde",
] }
dilithium-crypto = { git = "https://github.com/Quantus-Network/chain", package = "dilithium-crypto", tag = "v0.1.6" }

# Blockchain and RPC client
codec = { package = "parity-scale-codec", version = "3.7", features = [
	"derive",
] }
sp-core = { version = "37.0.0" }
sp-runtime = { version = "42.0.0" }
subxt = "0.43.0"
jsonrpsee = { version = "0.24", features = ["client"] }

# Needed for implementing custom Subxt hasher
subxt-metadata = "0.43.0"

[dev-dependencies]
tempfile = "3.8"
